--- a/LibraryManagmentSystem.Domain/LibraryManagmentSystem.Domain.csproj
+++ b/LibraryManagmentSystem.Domain/LibraryManagmentSystem.Domain.csproj
@@ -8,4 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.20" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Enum\" />
+  </ItemGroup>
 </Project>
