--- a/LibraryManagmentSystem.API/appsettings.json
+++ b/LibraryManagmentSystem.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-VSQSLHO\\MSSQLSERVER2 ; Database = LibrarySystemDb  ; Trusted_Connection = true;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    
+
+  }
 }
