implement Role controller using CQRS & MediatR

--- a/LibraryManagmentSystem.API/appsettings.json
+++ b/LibraryManagmentSystem.API/appsettings.json
@@ -16,5 +16,8 @@
     "Issuer": "https://localhost:1234/",
     "Audience": "https://localhost:7290/api",
     "ExpiryMinutes": 1
+  },
+  "AppSettings": {
+    "BaseUrl": "https://localhost:7164"
   }
 }
