Implement Category Services

--- a/LibraryManagmentSystem.Shared/LibraryManagmentSystem.Shared.csproj
+++ b/LibraryManagmentSystem.Shared/LibraryManagmentSystem.Shared.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enum\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagmentSystem.Domain\LibraryManagmentSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
