--- a/LibraryManagmentSystem.API/appsettings.json
+++ b/LibraryManagmentSystem.API/appsettings.json
@@ -19,5 +19,9 @@
   },
   "AppSettings": {
     "BaseUrl": "https://localhost:7164"
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost",
+    "DatabaseName": "LibraryDb"
   }
 }
