--- a/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
+++ b/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
@@ -10,11 +10,16 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EmailService.Domain\EmailService.Domain.csproj" />
     <ProjectReference Include="..\LibraryManagmentSystem.Domain\LibraryManagmentSystem.Domain.csproj" />
     <ProjectReference Include="..\LibraryManagmentSystem.Shared\LibraryManagmentSystem.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Feature\Borrow\Queries\" />
+    <Folder Include="Feature\Documents\Queries\" />
   </ItemGroup>
 
 </Project>
