--- a/LibraryManagmentSystem.Domain/LibraryManagmentSystem.Domain.csproj
+++ b/LibraryManagmentSystem.Domain/LibraryManagmentSystem.Domain.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.20" />
+    <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
   </ItemGroup>
 </Project>
