Integrate with supabase to upload book image & Integrate with rabbitMQ

--- a/LibraryManagmentSystem.API/appsettings.json
+++ b/LibraryManagmentSystem.API/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Swagger": {
+    "Enabled": false
+  },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server = DESKTOP-VSQSLHO\\MSSQLSERVER2 ; Database = LibrarySystemDb  ; Trusted_Connection = true;TrustServerCertificate=True;MultipleActiveResultSets=true"
