--- a/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
+++ b/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="MassTransit" Version="8.5.5" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EmailService.Domain\EmailService.Domain.csproj" />
@@ -19,7 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Feature\Borrow\Queries\" />
-    <Folder Include="Feature\Documents\Queries\" />
   </ItemGroup>
 
 </Project>
