--- a/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
+++ b/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LibraryManagmentSystem.Application\LibraryManagmentSystem.Application.csproj" />
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="MassTransit" Version="8.5.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
@@ -19,6 +20,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SharedEventsServices">
+      <HintPath>..\..\SharedEventsServices\SharedEventsServices\bin\Debug\net8.0\SharedEventsServices.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
