Add User Services & add feature to get all User

--- a/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
+++ b/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
@@ -25,5 +25,8 @@
       <HintPath>..\..\SharedEventsServices\SharedEventsServices\bin\Debug\net8.0\SharedEventsServices.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Feature\Users\Command\" />
+  </ItemGroup>
 
 </Project>
