add feature to mange Notifications

--- a/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
+++ b/LibraryManagmentSystem.Application/LibraryManagmentSystem.Application.csproj
@@ -25,5 +25,9 @@
       <HintPath>..\..\SharedEventsServices\SharedEventsServices\bin\Debug\net8.0\SharedEventsServices.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Feature\Notification\Command\" />
+    <Folder Include="Feature\Notification\Query\GetAllNotificationAdmin\" />
+  </ItemGroup>
 
 </Project>
