--- a/LibraryManagmentSystem.API/LibraryManagmentSystem.API.csproj
+++ b/LibraryManagmentSystem.API/LibraryManagmentSystem.API.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Attribute\" />
     <Folder Include="wwwroot\Files\Images\" />
     <Folder Include="wwwroot\Files\Pdfs\" />
   </ItemGroup>
