--- a/LibraryManagmentSystem.API/appsettings.json
+++ b/LibraryManagmentSystem.API/appsettings.json
@@ -11,7 +11,8 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = DESKTOP-VSQSLHO\\MSSQLSERVER2 ; Database = LibrarySystemDb  ; Trusted_Connection = true;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server = DESKTOP-VSQSLHO\\MSSQLSERVER2 ; Database = LibrarySystemDb  ; Trusted_Connection = true;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "RedisConnectionString": "localhost:6379,abortConnect=false"
 
 
   },
