--- a/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
+++ b/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
     <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 
