--- a/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
+++ b/LibraryManagmentSystem.Infrastructure/LibraryManagmentSystem.Infrastructure.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
+    <PackageReference Include="Stripe.net" Version="49.2.0" />
     <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 
